demo/metaprotocol-qza/qza-sample.yaml
# Copyright Aeraki Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qza-sample-server-v1
  labels:
    app: qza-sample-server
spec:
  selector:
    matchLabels:
      app: qza-sample-server
  replicas: 1
  template:
    metadata:
      annotations:
        sidecar.istio.io/bootstrapOverride: aeraki-bootstrap-config
        sidecar.istio.io/proxyImage: aeraki/meta-protocol-proxy-tcm:1.1.0
      labels:
        app: qza-sample-server
        version: v1
    spec:
      containers:
        - name: qza-sample-server
          image: aeraki/qza-server
          ports:
            - containerPort: 8090
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qza-sample-server-v2
  labels:
    app: qza-sample-server
spec:
  selector:
    matchLabels:
      app: qza-sample-server
  replicas: 1
  template:
    metadata:
      annotations:
        sidecar.istio.io/bootstrapOverride: aeraki-bootstrap-config
        sidecar.istio.io/proxyImage: aeraki/meta-protocol-proxy-tcm:1.1.0
      labels:
        app: qza-sample-server
        version: v2
    spec:
      containers:
        - name: qza-sample-server
          image: aeraki/qza-server
          ports:
            - containerPort: 8090
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qza-sample-client
  labels:
    app: qza-sample-client
spec:
  selector:
    matchLabels:
      app: qza-sample-client
  replicas: 1
  template:
    metadata:
      annotations:
        sidecar.istio.io/bootstrapOverride: aeraki-bootstrap-config
        sidecar.istio.io/proxyImage: aeraki/meta-protocol-proxy-tcm:1.1.0
      labels:
        app: qza-sample-client
    spec:
      containers:
        - name: qza-sample-client
          image: aeraki/qza-client
---
apiVersion: v1
kind: Service
metadata:
  name: qza-sample-server
spec:
  selector:
    app: qza-sample-server
  ports:
    - name: tcp-metaprotocol-qza-server
      protocol: TCP
      port: 8090
      targetPort: 8090
